--- a/static/styles/_why-worth-it.scss
+++ b/static/styles/_why-worth-it.scss
@@ -113,12 +113,10 @@
       top: 5rem;
     }
     &__title {
-      width: auto;
-      padding: 3rem 10rem;
-      // min-width: 60%;
-      // height: 12rem;
+      width: 80%;
       border-radius: 0 12rem;
-      font-size: 7rem;
+      padding: 3rem 10rem;
+      font-size: 6rem;
     }
 
     &__text {
